Added New York Style Chessecake recipe

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Odin's Recipes</h1>
+    <a href="recipes/nyscheesecake.html">New York-style Cheesecake</a>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus laboriosam fugiat et dolorem labore est veritatis, vitae rem consequatur pariatur obcaecati dicta ipsa recusandae ratione sequi temporibus consectetur dolores voluptatibus</p>
 </body>
 </html>
